# retro-data-structures

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  MANIFEST.in  README.md  deps.json  install.bat  invoke_templates.py  out.txt  parse_pwe_templates.py  pyproject.toml  pytest.ini  quit.bat  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  venv.bat
.github/: dependabot.yml
.github/workflows/: dependency.yml  linter.yml  python.yml
misc/: Prime3_MLVL.ksy  minimum_database_creator.py  prime1_minimum_database_creator.py  prime3_minimum_database_creator.py
retro_data_structures/: __main__.py  ancs.py  anim.py  asset_manager.py  asset_provider.py  asset_reference.py  base_resource.py  cinf.py  cli.py  cmdl.py  common_types.py  compression.py  construct_extensions.py  crc.py  cskr.py  data_section.py  dependencies.py  evnt.py  exceptions.py  file_tree_editor.py  game_check.py  guid.py  hacked_version_check.py  meta_animation.py  meta_transition.py  mlvl.py  mrea.py  pak.py  properties.py  property_template.py
retro_data_structures/adapters/: enum_adapter.py  offset.py
retro_data_structures/construct_extensions/: alignment.py  dict.py  json.py  misc.py  version.py
retro_data_structures/conversion/: ancs.py  anim.py  asset_converter.py  cinf.py  cmdl.py  conversions.py  cskr.py  errors.py  evnt.py  part.py  txtr.py
retro_data_structures/enums/: .gitignore
retro_data_structures/formats/: __init__.py  ancs.py  anim.py  area_collision.py  arot.py  audio_group.py  base_resource.py  char.py  chunk_descriptor.py  cinf.py  cmdl.py  cskr.py  cspp.py  dependency_cheating.py  dgrp.py  effect_script.py  evnt.py  form_description.py  form_descriptor.py  hier.py  lights.py  mapa.py  mapu.py  mapw.py  meta_animation.py  meta_transition.py  mlvl.py  mrea.py  msbt.py  pak.py  pak_gc.py  pak_wiiu.py  part.py  pas_database.py  room.py  sand.py  savw.py  scan.py  scly.py  script_layer.py  (+6 more)
retro_data_structures/properties/: .gitignore  __init__.py  base_property.py
retro_data_structures/property_templates/: .gitignore
retro_data_structures/references/: reference_database.py
retro_data_structures/references/echoes/: agon_wastes.py  frontend.py  great_temple.py  m01_sidehopperstation.py  m02_spires.py  m03_crossfirechaos.py  m04_pipeline.py  m05_spidercomplex.py  m06_shootinggallery.py  sanctuary_fortress.py  temple_grounds.py  torvus_bog.py  world.py
src/retro_data_structures/: __main__.py  asset_manager.py  base_resource.py  cli.py  common_types.py  compression.py  crc.py  data_section.py  dependencies.py  exceptions.py  file_provider.py  game_check.py  game_disc.py  gc_disc.py  json_util.py  pak_group.py  transform.py
src/retro_data_structures/adapters/: enum_adapter.py  offset.py
src/retro_data_structures/construct_extensions/: alignment.py  dict.py  json.py  misc.py  version.py  wrapper_classes.py
src/retro_data_structures/conversion/: ancs.py  anim.py  asset_converter.py  cinf.py  cmdl.py  conversions.py  cskr.py  errors.py  evnt.py  part.py  txtr.py
src/retro_data_structures/disc/: disc_common.py  game_disc.py  gc_disc.py  wii_disc.py
src/retro_data_structures/enums/: helper.py
src/retro_data_structures/formats/: __init__.py  ancs.py  anim.py  area_collision.py  arot.py  audio_group.py  banner.py  char.py  chunk_descriptor.py  cinf.py  cmdl.py  cmpd.py  cskr.py  cspp.py  dependency_cheating.py  deps.py  dgrp.py  dol.py  effect_script.py  evnt.py  form_descriptor.py  frme.py  guid.py  hier.py  lights.py  mapa.py  mapu.py  mapw.py  meta_animation.py  meta_transition.py  mlvl.py  mrea.py  msbt.py  ntwk.py  pak.py  pak_common.py  pak_gc.py  pak_wii.py  pak_wiiu.py  pas_database.py  (+13 more)
src/retro_data_structures/properties/: .gitignore  __init__.py  base_color.py  base_property.py  base_spline.py  base_vector.py  color.py  field_reflection.py  spline.py  vector.py
test/: conftest.py  test_ancs.py  test_anim.py  test_cinf.py  test_cmdl.py  test_compression.py  test_cskr.py  test_lib.py  test_pak.py  test_properties.py  test_pwe.py
test/conversion/: test_conversion.py
test/formats/: test_ancs.py  test_anim.py  test_cinf.py  test_cmdl.py  test_cskr.py  test_hier.py  test_mlvl.py  test_mrea.py  test_pak.py  test_pak_gc.py  test_particle_script.py  test_scan.py  test_script_api.py  test_script_object.py  test_strg.py  test_tree.py
tests/: conftest.py  test_asset_manager.py  test_cli.py  test_compression.py  test_game_disc.py  test_lib.py  test_properties.py  test_transform.py
tests/construct_extensions/: test_enum_adapter.py  test_wrapper_classes.py
tests/conversion/: test_conversion.py
tests/formats/: test_ancs.py  test_anim.py  test_banner.py  test_cinf.py  test_cmdl.py  test_cskr.py  test_frme.py  test_hier.py  test_mapa.py  test_mlvl.py  test_mrea.py  test_ntwk.py  test_pak_gc.py  test_pak_wii.py  test_particle_script.py  test_rule.py  test_savw.py  test_scan.py  test_script_api.py  test_strg.py  test_tree.py  test_txtr.py
tests/properties/: test_base_property.py  test_base_spline.py  test_base_vector.py  test_properties.py  test_vector.py
tests/test_files/: assets_corruption.json  assets_echoes.json  assets_prime.json  mrea_hashes_corruption.json  mrea_hashes_echoes.json  mrea_hashes_echoes_add_layer.json
tools/: asset_reference_files.py  compare_paks.py  create_comparable_report.py  create_file_list.py  profile_properties.py
