[metadata]
name = retro-data-structures
description = Construct file definitions for the Retro Studios game engine files
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Rust

[options]
packages = find:
install_requires =
    construct
    lzokay

include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    test

[options.package_data]
retro_data_structures =
    properties/*.prop
    properties/property_names.pname
